--- a/style.less
+++ b/style.less
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// original style sheet for markdown-compiled document.
+// Stylesheet for markdown-compiled html document.
 // ------------------------------------------------------------
 
 @import url("https://cdn.jsdelivr.net/npm/yakuhanjp@3.4.1/dist/css/yakuhanjp_s-noto.min.css");
