trim margin after page separators

--- a/style.less
+++ b/style.less
@@ -499,6 +499,9 @@ p.page-separator {
     bottom: -0.75em;
     left: -1.25em;
   }
+  + * {
+    margin-top: 0 !important;
+  }
 }
 @media print {
   p.page-separator {
