--- a/style.less
+++ b/style.less
@@ -289,7 +289,8 @@ blockquote {
   margin: 1rem;
   padding: 0.1rem 0.5rem;
   p {
-    word-break: break-word;
+    overflow-wrap: anywhere;
+    word-break: normal;
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
@@ -297,7 +298,7 @@ blockquote {
     display: none;
   }
   hr + p {
-    text-align: end;
+    text-align: right;
     line-height: 1;
     margin-top: -1em;
     color: lighten(@color-code-dark, 20%);
@@ -439,7 +440,7 @@ table {
 
 #timestamp {
   margin-right: 1rem;
-  text-align: end;
+  text-align: right;
   font-size: 10px;
   font-style: italic;
   color: #666;
@@ -455,7 +456,7 @@ table {
   height: 100%;
   font-size: 0.95rem;
   ul {
-    position: sticky;
+    position: fixed;
     top: 1rem;
     margin: 0;
     min-width: 6rem;
