--- a/style.less
+++ b/style.less
@@ -450,22 +450,21 @@ table {
 
 #toc {
   position: absolute;
-  left: calc(-1 * @width-side + 1em);
-  max-width: calc(@width-side - 2em);
+  left: calc(-1 * @width-side);
+  width: @width-side;
   top: -1rem;
   height: 100%;
   font-size: 0.95rem;
   ul {
-    position: fixed;
+    position: sticky;
     top: 1rem;
     margin: 0;
-    min-width: 6rem;
+    padding-left: 1em;
+    box-sizing: border-box;
   }
   li {
+    list-style: none;
     text-align: left;
-    padding-left: 0;
-    line-height: 1.2;
-    margin: 8px auto;
   }
   li.toc-h2 {
     margin-left: 0em;
